[IFC][shape-outside] Assertion and missing content with shape-outside https://bugs.webkit.org/show_bug.cgi?id=282315 <rdar://138873821>

Reviewed by Antti Koivisto.

Add missing "line is constrained by float" bit when we can't place any content on the
line due to floats that we didn't see when the line was being initialized.

It happens when there are no floats at the initial vertical position but as
we try to place some inline content on the line the (vertically) inflated line is now constrained by a float.

* LayoutTests/fast/inline/missing-content-with-shape-outside-float-expected.html: Added.
* LayoutTests/fast/inline/missing-content-with-shape-outside-float.html: Added.
* Source/WebCore/layout/formattingContexts/inline/InlineLineBuilder.cpp:
(WebCore::Layout::LineBuilder::handleInlineContent):

Canonical link: https://commits.webkit.org/285898@main